<resources>
    <string name="app_name">ProjectBloodShare</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="retype">Retype Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="facebook">CONNECT WITH FACEBOOK</string>
    <string name="register"><b> Register </b></string>
    <string name="email">Email</string>
    <string name="laki">Male</string>
    <string name="perempuan">Female</string>
    <string name="phonenumber">Phone Number</string>
    <string name="personal">Personal</string>
    <string name="organization">Organization</string>
    <string name="homeaddress">Home Address</string>
    <string name="defaultloc">Default Location</string>
    <string name="resend"> doesn`t get the code? <b> Resend </b></string>
    <string-array name="bloodtype">
        <item> Blood Type </item>
        <item> A </item>
        <item> B </item>
        <item> O </item>
        <item> AB </item>
    </string-array>

    <string-array name="reshus">
        <item> Reshus </item>
        <item> + </item>
        <item> - </item>
    </string-array>

    <string-array name="job">
        <item> Job </item>
        <item> Mahasiswa </item>
        <item> Pegawai </item>
        <item> Wirausaha </item>
    </string-array>
</resources>