<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/ic_header">


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_header_back"
            android:layout_marginLeft="25dp"
            android:background="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:layout_marginLeft="25dp"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="#d1d2d4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/username"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/phonenumber"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:text="@string/laki" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:text="@string/perempuan" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:entries="@array/bloodtype">
            </Spinner>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:entries="@array/reshus"
                android:layout_marginLeft="30dp">
            </Spinner>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/retype"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:text="@string/personal"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:text="@string/organization"/>

        </RadioGroup>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:entries="@array/job"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/homeaddress"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/defaultloc"
            android:textSize="16sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:drawableRight="@drawable/ic_blood_needed_location"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Agree with Terms and Conditions"
            android:textSize="16sp"
            android:textColor="#808284"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:drawableLeft="@drawable/ic_register_terms_on"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Register"
            android:textSize="16sp"
            android:typeface="normal"
            android:textColor="#43b3e6"
            android:backgroundTint="@color/white"
            app:strokeColor="#43b3e6"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:strokeWidth="2dp"
            android:onClick="almostthere"/>
    </LinearLayout>




</LinearLayout>