<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#43b3e6"
    tools:context=".Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_welcome_logo"
        android:layout_marginTop="70dp">

    </ImageView>

 <EditText
     android:layout_width="match_parent"
     android:layout_height="55dp"
     android:hint="@string/username"
     android:textColorHint="@color/white"
     android:backgroundTint="@color/white"
     android:layout_marginLeft="30dp"
     android:layout_marginRight="30dp"
     android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="16sp"
        android:typeface="normal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#43b3e6"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        android:padding="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:typeface="normal"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facebook"
        android:textSize="16sp"
        android:typeface="normal"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#43b3e6"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        app:icon="@drawable/ic_welcome_fb_login"
        app:iconGravity="textStart"
        android:padding="15dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="doesn't have account ?"
            android:typeface="normal"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="75dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:typeface="normal"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:onClick="register"/>


    </LinearLayout>



</LinearLayout>